<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".SingUp.SingUpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <com.okayyildirim.covid19support.Component.appTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_horizontal_margin"
                android:text="@string/userLabel"
                android:textColor="@color/textColor"
                android:textSize="@dimen/place_holder_title"
                />

            <com.okayyildirim.covid19support.Component.appEdittext
                android:id="@+id/user_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_horizontal_margin"
                android:layout_marginRight="@dimen/login_horizontal_margin"
                android:backgroundTint="@color/textColor"
                android:hint="@string/hint_user_label"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintTextColor"
                android:textCursorDrawable="@color/textColor"
                android:maxLines="1"
                android:textSize="@dimen/input_text"
                />

            <com.okayyildirim.covid19support.Component.appTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_horizontal_margin"
                android:text="@string/usePassLabel"
                android:textColor="@color/textColor"
                android:textSize="@dimen/place_holder_title"
                />

            <com.okayyildirim.covid19support.Component.appEdittext
                android:id="@+id/user_pass_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_horizontal_margin"
                android:layout_marginRight="@dimen/login_horizontal_margin"
                android:backgroundTint="@color/textColor"
                android:hint="@string/hint_pass_label"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintTextColor"
                android:textCursorDrawable="@color/textColor"
                android:maxLines="1"
                android:textSize="@dimen/input_text"
                android:inputType="textPassword"
                />

        </LinearLayout>
    </RelativeLayout>

    <com.okayyildirim.covid19support.Component.appButton
        android:id="@+id/singin_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="14dp"
        android:text="@string/sing_up_button"
        android:textSize="@dimen/button_text_size_l"
        android:textColor="@color/textColor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/login_horizontal_margin"
        android:layout_marginRight="@dimen/login_horizontal_margin"
        android:background="@drawable/roundedbutton"
        android:stateListAnimator="@null"
        android:textAllCaps="false"
        />

</LinearLayout>